# sensing

./: README.md
1. stereo_camera/: README.md
1. stereo_camera/firmware_fx3/: CMakeLists.txt  README.md  cyfxgpif2config.h  cyfxuvcdscr.c  fx3.cmake  sensor_imx477_wzw.c  sensor_imx477_wzw.h  uvc.c  uvc.h
1. stereo_camera/gateware_artix7/: README.md  Vitis.c  vdma_api.c
1. stereo_camera/hardware/: README.md  main_board-B_Cu.gbr  main_board-F_Cu.gbr  main_board-In1_Cu.gbr  main_board-In2_Cu.gbr  main_board-In3_Cu.gbr  main_board-In4_Cu.gbr  sensor_board-B_Cu.gbr  sensor_board-F_Cu.gbr
1. stereo_camera/mechanical_cs_mount/: README.md
1. stereo_camera/simulation/: README.md
1. stereo_camera/software/: README.md  blender_randomnize.py  depthmap.py  sahi_kalman.py  yolo_sam.py
1. stereo_camera/sythetic_data/: README.md  sythetic.blend
2. FMCW_24Ghz_K-LC7/: README.md
2. FMCW_24Ghz_K-LC7/firmware/: .mxproject  CMakeLists.txt  STM32F730XX_FLASH.ld  firmware.ioc
2. FMCW_24Ghz_K-LC7/hardware/: k_lc7-B_Cu.gbr  k_lc7-F_Cu.gbr  k_lc7-In1_Cu.gbr  k_lc7-In2_Cu.gbr
2. FMCW_24Ghz_K-LC7/mechanical_lens/: Horn_lens.FCStd  conical_lens.FCStd
3. CW_radar_10Ghz/: README.md
3. CW_radar_10Ghz/firmware/: .mxproject  CMakeLists.txt  CMakeLists_no_overwrite.txt  README.md  STM32H723XG_FLASH.ld  software.ioc
3. CW_radar_10Ghz/hardware/: Design1.pll  README.md
3. CW_radar_10Ghz/simulation/: 3_way_splitter.FCStd  README.md
3. CW_radar_10Ghz/software/: README.md  spin_axis.py
4. DCA1000EVM_implementation/: README.md
6. multi_radar_synchronization/: README.md
(+132 files in other folders)
